--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -31,6 +31,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 187%;
+  transition: color 0.2s ease;
 
   &:hover {
     color: var(--coloro-brown-light);
