--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,8 @@
 @import "blocks/contacts.css";
 @import "blocks/socials.css";
 @import "blocks/modal.css";
+@import "blocks/fly.css";
+@import "blocks/fly-form.css";
 @import "blocks/footer.css";
 
 
