--- a/styles/blocks/contact.css
+++ b/styles/blocks/contact.css
@@ -19,6 +19,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 24px 24px;
+  padding-bottom: 40px;
 }
 
 .contact__info-item {
@@ -85,5 +86,9 @@
 
   .contact__form-fields {
     grid-template-columns: 1fr;
+  }
+
+  .contact__form-title {
+    margin-top: 32px;
   }
 }
