--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,17 +2,18 @@
   --coloro-white: #FFFFFF;
   --coloro-black: #000000;
   --coloro-yellow-light: #EDF0D7;
-  --coloro-brown: #5C524A;
-  --coloro-brown-light: #D4A373;
+  --coloro-brown: #858585;
+  --coloro-brown-light: #cecccc;
   --coloro-gray: #B4BFC5;
   --coloro-gray-light: #D9D9D9;
 
-  --font-family: "Garamond", sans-serif;
+  --font-family: "Garamond", "EB Garamond", serif;
   --font-family-secondary: "Bikham Cyr Script", sans-serif;
 
   --transition-duration: 0.2s;
 
   --border: 1px solid var(--coloro-black);
+  --border-bold: 2px solid var(--coloro-gray-light);
   --border-radius: 10px;
 
   --box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
