--- a/styles/blocks/contact.css
+++ b/styles/blocks/contact.css
@@ -30,6 +30,7 @@
 .contact__info-text a {
   text-decoration: none;
   color: inherit;
+  transition: color 0.2s ease;
 
   &:hover {
     color: var(--coloro-brown-light);
